--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,11 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": [
-        "laravel",
-        "framework"
-    ],
+    "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "filament/filament": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
@@ -55,7 +53,8 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
@@ -73,12 +72,12 @@
             "Illuminate\\Foundation\\ComposerScripts::prePackageUninstall"
         ],
         "serve": [
-          "Composer\\Config::disableProcessTimeout",
-          "@php artisan serve --port=7106 --host=100.108.9.46"
+            "Composer\\Config::disableProcessTimeout",
+            "@php artisan serve --port=7106 --host=100.108.9.46"
         ],
         "queue": [
-          "Composer\\Config::disableProcessTimeout",
-          "@php artisan queue:listen --tries=1"
+            "Composer\\Config::disableProcessTimeout",
+            "@php artisan queue:listen --tries=1"
         ]
     },
     "extra": {
